# SYSC3303Project

./: .gitignore  CMakeLists.txt  Elevator.cpp  Elevator.h  Floor.cpp  Floor.h  Makefile  README.md  README.txt  run.sh  runCatch2.sh  runTests.sh
OldIteratonTest/Iteration2/: ProjectTest.cpp
ReadME/: README.md
Sams_project/: Floor.h  README.txt  SamTestCase.txt  Scheduler.cpp  main.cpp
builds/: main  main.o  tests
data/tests/: SamTestCase.txt  input_file_2.txt
examples/: Box.cpp  Project_Iter1_Parameters.txt  SimpleEchoServer.cpp
lib/: shareddata.txt
references/: Project_Iter1_Parameters.txt
src/: CMakeLists.txt  Datagram.h  Datagram2.h  Elevator.cpp  Elevator.h  ElevatorDataTypes.h  ElevatorSubsystem.cpp  ElevatorSubsystem.h  Floor.cpp  Floor.h  Scheduler.cpp  Scheduler.h  input_file.txt  main  main.cpp
tests/: CMakeLists.txt  ProjectTest.cpp  UnitTestCasesForIteration.cpp
tools/: build-and-run.sh  build-only.sh  run-only.sh
